--- a/PyBank/main.py/PyBank Hilliker.ipynb
+++ b/PyBank/main.py/PyBank Hilliker.ipynb
@@ -2,26 +2,20 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "Financial Analysis\n",
+      "--------------------------------\n",
       "Total Months: 86\n",
-      "Total = $38382578\n"
-     ]
-    },
-    {
-     "ename": "TypeError",
-     "evalue": "'int' object is not iterable",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-49-3e059b045996>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m     63\u001b[0m     \u001b[0;31m#for i in bymonth_change:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     64\u001b[0m         \u001b[0;31m#bymonth_sum = sum + i\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 65\u001b[0;31m     \u001b[0mbymonth_sum\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0msum\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mbymonth_change\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     66\u001b[0m     \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mbymonth_sum\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     67\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;31mTypeError\u001b[0m: 'int' object is not iterable"
+      "Total: $38382578\n",
+      "Average Change: $-2315.12\n",
+      "Greatest Increase in Profits: Feb-2012  $ 1926159\n",
+      "Greatest Decrease in Profits: Sep-2013  $ -2196167\n"
      ]
     }
    ],
@@ -43,6 +37,10 @@
     "    budget_list = list(csvreader)\n",
     "    #print(budget_list)\n",
     "\n",
+    "#Print header\n",
+    "    print(\"Financial Analysis\")\n",
+    "    print(\"--------------------------------\")\n",
+    "\n",
     "# The total number of months included in the dataset; count the number of rows (not header); \n",
     "    #assumes data is always given as totals for the month\n",
     "    \n",
@@ -57,7 +55,7 @@
     "    #print(profit_list)\n",
     "    #sum all of the profit/loss values\n",
     "    net_tot = sum([i for i in profit_list])\n",
-    "    print(f'Total = ${net_tot}')\n",
+    "    print(f'Total: ${net_tot}')\n",
     "\n",
     "# The average of the changes in \"Profit/Losses\" over the entire period\n",
     "    #make a list of the months and trim off the first\n",
@@ -75,45 +73,69 @@
     "    #print(len(last_month_earn))\n",
     "    #calculate average monthly change by subtracting the previous month's profit/loss from the current month\n",
     "    #set up as 2 lists, outputting a list of the change for each month\n",
+    "    #have to append to list in a loop to make it an iterable list\n",
     "    bymonth_change = []\n",
     "    for i in range(len(current_month_earn)):\n",
-    "        bymonth_change = current_month_earn[i] - last_month_earn[i]\n",
+    "        bymonth_change.append(current_month_earn[i] - last_month_earn[i])\n",
+    "\n",
+    "        #bymonth_change = current_month_earn[i] - last_month_earn[i]\n",
     "        #bymonth_change = str(bymonth_change)\n",
     "        #bymonth_change = [row[0] for row in bymonth_change]\n",
     "        #bymonth_change = str(bymonth_change)\n",
     "        #bymonth_change = list[bymonth_change]\n",
     "        #PROBLEM: doesn't look like a python list with brackets and commas in horizontal direction; looks like a vertical list of numbers\n",
     "        #print(bymonth_change)\n",
-    "        \n",
-    "    #Sum the monthly changes in profit/loss\n",
-    "    bymonth_sum = -196785 #TEMPORARY VALUE to test code below\n",
-    "    #PROBLEM: get error 'int' object is not subscriptable\n",
-    "    #for i in bymonth_change:\n",
-    "        #bymonth_sum = sum + i\n",
-    "    #bymonth_sum = sum(bymonth_change)\n",
+    "       \n",
+    "#Sum the monthly changes in profit/loss\n",
+    "    bymonth_sum = 0 \n",
+    "    bymonth_sum = sum(bymonth_change)\n",
     "    #print(bymonth_sum)\n",
     "    \n",
-    "    \n",
-    "    #PROBLEM: getting last # in list, not sum\n",
-    "#    bymonth_sum = 0\n",
-    "    #PROBLEM: get error 'int' object is not subscriptable\n",
-    "#     for i in range(bymonth_change):\n",
-    "#         bymonth_sum = sum([bymonth_change[i]])\n",
-    "    #PROBLEM: get error 'int' object is not subscriptable\n",
-    "#     bymonth_sum = sum(bymonth_change)\n",
-    "#    print(bymonth_sum)\n",
-    "    \n",
     "#Calculate the average (once I can get the sum)\n",
-    "#   avg_monthly_change = int(bymonth_sum) / len(current_month_earn)\n",
-    "#     print(avg_monthly_change)\n",
-    "#     #monthly_change = [((i+1)- i) for i in profit_list]\n",
-    "    #print(monthly_change)\n",
-    "        \n",
+    "    avg_monthly_change = int(bymonth_sum) / len(current_month_earn)\n",
+    "    avg_monthly_change = round(avg_monthly_change, 2)\n",
+    "    print(f\"Average Change: ${avg_monthly_change}\")\n",
+    "\n",
     "# The greatest increase in profits (date and amount) over the entire period\n",
-    "    #calculate monthly change in profit by subtracting previous month from current month\n",
-    "    #search for largest number\n",
-    "# The greatest decrease in losses (date and amount) over the entire period\n",
-    "#search for smallest (most negative) number from monthly change in profit"
+    "    #Find max value from bymonth_change\n",
+    "    max_value = max(bymonth_change)\n",
+    "    #print(max_value)\n",
+    "\n",
+    "    #Allows you to visualize all the items in the zipped list as pairs:\n",
+    "    #for m, b in zip(month_list, bymonth_change):\n",
+    "        #print(m, \" \", b)\n",
+    "    #Modify to show only the pair with the variable max_value:\n",
+    "    for m, b in zip(month_list, bymonth_change):\n",
+    "        if b == max_value:\n",
+    "            print(\"Greatest Increase in Profits: \" + m, \" $\", b)\n",
+    "\n",
+    "#Repeat with min value from bymonth_change\n",
+    "    min_value = min(bymonth_change)\n",
+    "\n",
+    "    for m, b in zip(month_list, bymonth_change):\n",
+    "        if b == min_value:\n",
+    "            print(\"Greatest Decrease in Profits: \" + m, \" $\", b)\n",
+    "            \n",
+    "#Write results to a text file:\n",
+    "\n",
+    "\n",
+    "f = open('PyBankAKH.txt','w') \n",
+    "print(\"Financial Analysis\", file = f)\n",
+    "print(\"--------------------------------\", file = f)\n",
+    "print(f'Total Months: {month_count}', file = f)\n",
+    "print(f'Total: ${net_tot}', file = f)\n",
+    "print(f\"Average Change: ${avg_monthly_change}\", file = f)\n",
+    "for m, b in zip(month_list, bymonth_change):\n",
+    "        if b == max_value:\n",
+    "            print(\"Greatest Increase in Profits: \" + m, \" $\", b, file = f)\n",
+    "for m, b in zip(month_list, bymonth_change):\n",
+    "        if b == min_value:\n",
+    "            print(\"Greatest Decrease in Profits: \" + m, \" $\", b, file = f)\n",
+    "  \n",
+    "f.close() \n",
+    "\n",
+    "\n",
+    "          "
    ]
   },
   {
